change project id

--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,5 +1,5 @@
 {
-    "project_id" : "infra-219913",
+    "project_id" : "infra-numbers",
     "source_image_family" : "debian-9",
     "machine_type" : "g1-small",
     "disk_size" : "15",
