--- a/terraform/stage/terraform.tfvars.example
+++ b/terraform/stage/terraform.tfvars.example
@@ -1,4 +1,4 @@
 project = "infra-ololo"
 public_key_path = "~/.ssh/appuser.pub"
 private_key_path = "~/.ssh/appuser"
-disk_image = "reddit-base
+disk_image = "reddit-base"
