--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 inventory = ./environments/stage/inventory
+vault_password_file = vault.key
 remote_user = appuser
 private_key_file = ~/.ssh/appuser
 # Отключим проверку SSH Host-keys (поскольку они всегда разные для новых инстансов)
