--- a/ansible/playbooks/site.yml
+++ b/ansible/playbooks/site.yml
@@ -1,6 +1,5 @@
 ---
-- import_playbook: db.yml
-- import_playbook: app.yml
-- import_playbook: deploy.yml
-- import_playbook: users.yml
-
+- include: db.yml
+- import: app.yml
+- import: deploy.yml
+- import: users.yml
