--- a/ansible/roles/db/tasks/main.yml
+++ b/ansible/roles/db/tasks/main.yml
@@ -1,9 +1,13 @@
 ---
+# tasks file for db
+- name: Show info about the env this host belongs to
+  debug:
+    msg: "This host is in {{ env }} environment!!!"
+
 - name: Change mongo config file
   template:
-    src: templates/mongod.conf.j2
+    src: mongod.conf.j2
     dest: /etc/mongod.conf
-  mode: 0644
+    mode: 0644
   notify: restart mongod
-- name: Show info about the env this host belongs to
-  debug: msg="This host is in {{ env }} environment!!!"
+  
